welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: value gauche is not a member of Unit
    else {recule gauche}}}
                 ^